klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/audit/DuplicateAuditDataPropertiesErrorTest.klass
package com.errors

class DummyClass
    systemTemporal
    versioned
    audited
{
    id              : Long id key;
    system1         : TemporalRange? system;
    system2         : TemporalRange? system;
    systemFrom1     : TemporalInstant? system from;
    systemFrom2     : TemporalInstant? system from;
    systemTo1       : TemporalInstant? system to;
    systemTo2       : TemporalInstant? system to;
    createdById1    : String createdBy userId final private;
    lastUpdatedById1: String lastUpdatedBy userId private;
    createdById2    : String createdBy userId final private;
    lastUpdatedById2: String lastUpdatedBy userId private;
}

user User
    systemTemporal
    versioned
{
    id              : String id key userId;
}
